; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-audio.c_calc_min_ts.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-audio.c_calc_min_ts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_core_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.obs_core_data*, i64, i32*)* @calc_min_ts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @calc_min_ts(%struct.obs_core_data* %0, i64 %1, i32* %2) #0 {
  %4 = alloca %struct.obs_core_data*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  store %struct.obs_core_data* %0, %struct.obs_core_data** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load %struct.obs_core_data*, %struct.obs_core_data** %4, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = call i8* @find_min_ts(%struct.obs_core_data* %8, i32* %9)
  store i8* %10, i8** %7, align 8
  %11 = load %struct.obs_core_data*, %struct.obs_core_data** %4, align 8
  %12 = load i64, i64* %5, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = load i32, i32* %13, align 4
  %15 = call i64 @mark_invalid_sources(%struct.obs_core_data* %11, i64 %12, i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %3
  %18 = load %struct.obs_core_data*, %struct.obs_core_data** %4, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = call i8* @find_min_ts(%struct.obs_core_data* %18, i32* %19)
  store i8* %20, i8** %7, align 8
  br label %21

21:                                               ; preds = %17, %3
  %22 = load i8*, i8** %7, align 8
  ret i8* %22
}

declare dso_local i8* @find_min_ts(%struct.obs_core_data*, i32*) #1

declare dso_local i64 @mark_invalid_sources(%struct.obs_core_data*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
